fixed python debugging issue